objects/External_API_Token__c/External_API_Token__c.object-meta.xml
<CustomObject>
    <label>External API Token</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External API Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>