objects/External_API_Token__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>