objects/External_API_Token__c/fields/Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Expires_At__c</fullName>
    <label>Token Expires At</label>
    <type>DateTime</type>
</CustomField>